--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,3 +1,12 @@
+<nav>
+      <% if logged_in? %>
+
+        <a href="/logout"> Log Out </a>
+        
+      <%end %>
+
+</nav>
+
 <% flash.keys.each do |type| %>
   <div data-alert class="flash <%= type %> alert-box radius">
     <%= flash[type] %>
