--- a/app/views/games/create_game.erb
+++ b/app/views/games/create_game.erb
@@ -3,17 +3,17 @@
 <label for="game_name">Name: </label>
 <input type="text" name="game[name]" placeholder="Game Name" id="game_name">
 
-<%if !Console.all == []%>
+<%if Console.all != []%>
 <h3>Choose the console this game belongs to:</h3>
 <%Console.all.each do |console|%>
   <%=console.name%>
   <input type="radio" name="game[console_id]" value="<%=console.id%>">
   <%end%>
-  or
+  <h2>or</h2>
 <%end%>
 
 <h3>Create the console this game belongs to!</h3>
 <label for="game_console">Name: </label>
-<input type="text" name="console[name]" placeholder="Game Console" id="game_console">
-<input type="submit" value="create game"
+<input type="text" name="console_name" placeholder="Game Console" id="game_console"><br></br>
+<input type="submit" value="create game">
 </form>
