--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,8 +1,11 @@
 <nav>
       <% if logged_in? %>
 
+        <a href="/home">Home Page</a>&nbsp;
+        <a href="/games/new">Add New Games</a>&nbsp;
         <a href="/logout"> Log Out </a>
-        
+
+
       <%end %>
 
 </nav>
