--- a/app/views/consoles/index.erb
+++ b/app/views/consoles/index.erb
@@ -1,13 +1,13 @@
-<center><h1>Welcome to your Games Library <%=current_user.username%>!</h1><center><br></br>
+<center><h1>Welcome to your Games Library <%=current_user.username%>!</h1></center><br></br>
 
-<%if Console.all == []%>
+<%if current_user.consoles == []%>
   <h4>Your Library is currently empty!<br>
     click <a href="/games/new">here</a> to add some games!</h4>
 
 <%else%>
   <ul>
-  <%@console.each do |console|%>
-    <li>console.name</li>
+  <%current_user.consoles.each do |console|%>
+    <li><a href='/consoles/<%=console.id%>'><%=console.name%></a></li>
     <%end%>
   </ul>
 <%end%>
