added edit.erb to console folder and added edit link to views/consoles/show.erb

--- a/app/views/consoles/show.erb
+++ b/app/views/consoles/show.erb
@@ -1,4 +1,4 @@
-<h1><%=@console.name%>'s games!</h1>
+<h1><%=@console.name%>'s games!</h1> <a href="/consoles/<%=@console.id%>/edit">edit console</a>
 
 
 <%@console.games.each do |game|%>
