--- a/app/views/consoles/edit.erb
+++ b/app/views/consoles/edit.erb
@@ -1,6 +1,6 @@
 <h1>Edit This Console:</h1>
 
-<form action="/consoles/:id" method="POST">
+<form action="/consoles/<%=@console.id%>" method="POST">
   <input type="hidden" name="_method" value="patch">
   <label for=console_name>Console Name:</label>
   <input type="text" name="name" placeholder="<%=@console.name%>" id="console_name">
