added new redirect for game/id/delete and added new flash messages

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <nav>
       <% if logged_in? %>
 
-        <a href="/home">Home Page</a>&nbsp;
+        <a href="/consoles">Home Page</a>&nbsp;
         <a href="/games/new">Add New Games</a>&nbsp;
         <a href="/logout"> Log Out </a>
 
