--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,6 +4,6 @@
 <label for="username">Username: </label><br></br>
 <input type="text" name="username" placeholder="username" id="username"><br></br>
 <label for="password">Password: </label><br></br>
-<input type="text" name="password" placeholder="password" id="password"><br></br>
+<input type="password" name="password" placeholder="password" id="password"><br></br>
 <input type="submit" value="login">
 </form>
