--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -7,3 +7,5 @@
 <input type="password" name="password" placeholder="password" id="password"><br></br>
 <input type="submit" value="login">
 </form>
+
+<p>Not a member? Click <a href="/signup">here</a> to sign up!</p>
