added log in link in sign up in case user is already a user

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -7,3 +7,5 @@
 <input type="password" name="password" placeholder="desired password" id="password"><br></br>
 <input type="submit" value="create account">
 </form>
+
+<p>Already a member? Log in <a href="/login">here</a></p>
