--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<h1>Log into your games library</h1><br></br>
+<h1>Log into your games library</h1><br>
 
 <form action="/login" method="POST">
 <label for="username">Username: </label><br></br>
